# icalendarcleaner

./: .gitignore  .gitmodules  cabal.project  icalendarcleaner.cabal
calendarmailer/: Main.hs
icalendarcleaner/: ChangeLog.md  LICENSE  Main.hs
icalendarcleaner/lib/Text/ICalendar/: Cleaner.hs
lib/Text/ICalendar/: Cleaner.hs  Sanitizer.hs
src/: Main.hs
