--  For documentation, see http://haskell.org/cabal/users-guide/

name:                icalendarcleaner
version:             0.1.0.0
synopsis:            Clean icalendar events by removing unwanted fields
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Kai Harries
maintainer:          kai.harries@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable icalendarcleaner
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10
                       , bytestring >= 0.10
                       , containers >= 0.5
                       , data-default >= 0.7
                       , iCalendar >= 0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
