--  For documentation, see http://haskell.org/cabal/users-guide/

name:                iCalendarCleaner
version:             0.1.0.0
synopsis:            Clean icalendar events by removing unwanted fields
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Kai Harries
maintainer:          kai.harries@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10


library icalendarcleaner-lib
  exposed-modules:     Text.ICalendar.Cleaner
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10
                     , bytestring >=0.10 && <0.11
                     , data-default >=0.7 && <0.8
                     , containers >=0.5 && <0.6
                     , iCalendar >=0.4 && <0.5
  hs-source-dirs:      lib
  default-language:    Haskell2010


executable icalendarcleaner
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, icalendarcleaner-lib
  hs-source-dirs:      icalendarcleaner
  default-language:    Haskell2010
