--  For documentation, see http://haskell.org/cabal/users-guide/

name:                iCalendarCleaner
version:             0.1.0.0
synopsis:            Clean icalendar events by removing unwanted fields
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Kai Harries
maintainer:          kai.harries@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10


library icalendarcleaner-lib
  exposed-modules:     Text.ICalendar.Cleaner
                     , Text.ICalendar.Sanitizer
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8
                     , bytestring >=0.10
                     , data-default >=0.7
                     , extra
                     , containers >=0.5
                     , iCalendar >=0.4
                     , parsec
                     , text
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall


executable icalendarcleaner
  main-is:             Main.hs
  build-depends:       base >=4.8, icalendarcleaner-lib
  hs-source-dirs:      icalendarcleaner
  default-language:    Haskell2010
  ghc-options:         -Wall


executable calendarmailer
  main-is:             Main.hs
  build-depends:       base >=4.8
                     , icalendarcleaner-lib
                     , bytestring
                     , containers >=0.5
                     , directory
                     , filepath
                     , iCalendar >=0.4
                     , process
                     , text
                     , unix
  hs-source-dirs:      calendarmailer
  default-language:    Haskell2010
  ghc-options:         -Wall
